# OpenVeh_SOMEIP

./: LICENSE  README.md  WORK_REPORT_2026-04-09.md
.github/agents/: someip-implementation.agent.md
services/someip_app_framework/include/someip_app_framework/: application_runtime.hpp
services/someip_sd_cpp/: CMakeLists.txt  README.md  run_tests.sh
services/someip_sd_cpp/examples/: consumer_demo.cpp  provider_demo.cpp  run_sd_daemon.cpp  someip_app_protocol.hpp
services/someip_sd_cpp/include/someip_sd/: protocol.hpp  sd_api.hpp  sd_daemon.hpp  types.hpp
services/someip_sd_cpp/src/: protocol.cpp  sd_api.cpp  sd_daemon.cpp
services/someip_sd_cpp/tests/: test_sd_service.cpp
tools/someip_idl/: README.md  generate_someip_app.py  generate_someip_params.py
tools/someip_idl/examples/: vehicle_interface.json
tools/someip_idl/examples/collab/: 01_types.json  02_requests.json  03_events.json
tools/someip_idl/examples/vehicle_node/: application.json  client.json  message.json  server.json
tools/someip_idl/generated_app/: generated_someip_application.hpp
tools/someip_idl/tests/: run_app_framework_tests.sh  run_tests.sh  test_generated_params  test_generated_params.cpp
tools/someip_idl/tests/generated_app/: test_generated_app_framework  test_generated_app_framework.cpp
tools/someip_idl/tests/generated_app/app/: VehicleNodeApplication.hpp
tools/someip_idl/tests/generated_app/params/: GetVehicleInfoRequest.hpp  SetCruiseSpeedRequest.hpp  SetCruiseSpeedResponse.hpp  VehicleStatus.hpp  WheelInfo.hpp  generated_someip_params.hpp  someip_codec_support.hpp
